header container overflow fix

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -24,7 +24,7 @@ body:not(.loaded) {
 }
 
 .wrapper {
-	width: 100vw;
+	width: 100%;
 	margin: 0 auto;
 	padding: 0 2.604vw;
 }
