--- a/src/scss/sections/header.scss
+++ b/src/scss/sections/header.scss
@@ -6,6 +6,7 @@ header {
   z-index: 5;
   padding: 1.302vw 0;
   position: absolute;
+  width: 100%;
 
   .wrapper {
     display: flex;
